# linux-labs

./: .gitignore
lab1/: README.md  pyproject.toml  scan.txt
lab1/bldd/: main.py
lab1/bldd/cli/: app.py
lab1/bldd/domain/: executable.py
lab1/bldd/service/: reporter.py  scanner.py
lab2/: .gitignore  README.md  keygen  keygen.c  patch  patch.c
lab4/: int_stack.c  kernel_stack.c
lab5/: Makefile  int_stack.c  kernel_stack.c
